# agentic-workshop

./: .env.example  .gitignore  .mcp.json  INSTRUCTIONS.md  PROGRESS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
agentlab/: __init__.py  augmented_llm.py  context_example.md  dry_run.py  eval_optimizer.py  hitl_agent.py  llm_judge.py  mcp_server.py  orchestrator.py  parallel.py  permissions.py  pev_agent.py  prompt_chain.py  react_agent.py  reflection_agent.py  router.py  tool_definitions.py
data/: sample_notes.json
solutions/fase1/: augmented_llm.py  eval_optimizer.py  orchestrator.py  parallel.py  prompt_chain.py  router.py
solutions/fase2/: pev_agent.py  react_agent.py  reflection_agent.py
solutions/fase3/: mcp_server.py
solutions/fase4/: context_example.md  permissions.py  tool_definitions.py
solutions/fase5/: dry_run.py  hitl_agent.py.new  llm_judge.py
